# corryvreckan

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  setup.sh
doc/: CMakeLists.txt
doc/reference/: Doxyfile  Doxyfile.in  README.md
doc/usermanual/: config.tex  corryvreckan-manual.tex  references.bib
doc/usermanual/chapters/: algorithms.tex  configuration.tex  correlation.tex  development.tex  eventbuilding.tex  framework.tex  howtoalign.tex  installation.tex  introduction.tex  modules.tex  objects.tex  onlinemonitoring.tex  testing.tex  tools.tex
doc/usermanual/figures/: corrymanual_eventbuilding_datadriven.xml  corrymanual_eventbuilding_framebased.xml
src/algorithms/: ATLASpixEventLoader.cpp  ATLASpixEventLoader.h  Alignment.C  Alignment.cpp  Alignment.h  BasicTracking.C  BasicTracking.cpp  BasicTracking.h  CLICpixEventLoader.C  CLICpixEventLoader.cpp  CLICpixEventLoader.h  CMakeLists.txt  Clicpix2Correlator.C  Clicpix2Correlator.cpp  Clicpix2Correlator.h  Clicpix2EventLoader.C  Clicpix2EventLoader.cpp  Clicpix2EventLoader.h  ClicpixAnalysis.C  ClicpixAnalysis.cpp  ClicpixAnalysis.h  DUTAnalysis.C  DUTAnalysis.cpp  DUTAnalysis.h  DataDump.C  DataDump.cpp  DataDump.h  EventDisplay.C  EventDisplay.h  FileReader.C  FileReader.cpp  FileReader.h  FileWriter.C  FileWriter.cpp  FileWriter.h  GUI.C  GUI.cpp  GUI.h  GenericAlgorithm.C  GenericAlgorithm.cpp  (+33 more)
src/algorithms/ATLASpixEventLoader/: ATLASpixEventLoader.cpp  ATLASpixEventLoader.h  CMakeLists.txt  README.md
src/algorithms/Alignment/: Alignment.cpp  Alignment.h  CMakeLists.txt  README.md
src/algorithms/BasicTracking/: BasicTracking.cpp  BasicTracking.h  README.md
src/algorithms/CLICpixEventLoader/: CLICpixEventLoader.cpp  CLICpixEventLoader.h  CMakeLists.txt  README.md
src/algorithms/Clicpix2Correlator/: Clicpix2Correlator.h  README.md
src/algorithms/Clicpix2EventLoader/: CMakeLists.txt  Clicpix2EventLoader.cpp  Clicpix2EventLoader.h  README.md
src/algorithms/ClicpixAnalysis/: ClicpixAnalysis.cpp  ClicpixAnalysis.h  README.md
src/algorithms/DUTAnalysis/: CMakeLists.txt  DUTAnalysis.cpp  DUTAnalysis.h  README.md
src/algorithms/DataDump/: CMakeLists.txt  DataDump.h  README.md
src/algorithms/DataOutput/: DataOutput.cpp  DataOutput.h  README.md
src/algorithms/EUDAQEventLoader/: EUDAQEventLoader.cpp  EUDAQEventLoader.h  README.md
src/algorithms/EtaCalculation/: EtaCalculation.cpp  EtaCalculation.h  README.md
src/algorithms/EtaCorrection/: EtaCorrection.cpp  EtaCorrection.h  README.md
src/algorithms/FileReader/: FileReader.cpp  FileReader.h  README.md
src/algorithms/FileWriter/: CMakeLists.txt  FileWriter.h  README.md
src/algorithms/GUI/: GUI.h  README.md
src/algorithms/GenericAlgorithm/: GenericAlgorithm.h  README.md
src/algorithms/ImproveReferenceTimestamp/: ImproveReferenceTimestamp.cpp  ImproveReferenceTimestamp.h  README.md
src/algorithms/ImproveTimestamp/: CMakeLists.txt  ImproveTimestamp.cpp  ImproveTimestamp.h  README.md
src/algorithms/MaskCreator/: CMakeLists.txt  MaskCreator.cpp  MaskCreator.h  README.md
src/algorithms/Millepede/: Millepede.cpp  Millepede.h  README.md
src/algorithms/OnlineMonitor/: OnlineMonitor.cpp  OnlineMonitor.h  README.md
src/algorithms/Prealignment/: Prealignment.cpp  Prealignment.h  README.md
src/algorithms/SpatialTracking/: README.md  (+2 more)
src/core/: Algorithm.h  Analysis.C  Analysis.cpp  Analysis.h  Analysis.hpp  CMakeLists.txt  Clipboard.h  Corryvreckan.cpp  Corryvreckan.hpp  Detector.cpp  Detector.h  DetectorParameters.h  Parameters.C  Parameters.cpp  Parameters.h  Steering.C  Tee.h  dynamic_algorithm_impl.cpp
src/exec/: CMakeLists.txt  corry.cpp
src/modules/: CMakeLists.txt  README_template.md
src/objects/: CMakeLists.txt  Cluster.cpp  Cluster.h  Cluster.hpp  Event.cpp  Event.hpp  GblTrack.cpp  GblTrack.hpp  GuiDisplay.h  GuiDisplay.hpp  KDTree.cpp  KDTree.h  KDTree.hpp  KDTreeTimepix3.h  Linkdef.h  MCParticle.cpp  MCParticle.h  MCParticle.hpp  Multiplet.cpp  Multiplet.hpp  Object.cpp  Object.hpp  Pixel.cpp  Pixel.h  Pixel.hpp  SpidrSignal.h  SpidrSignal.hpp  StraightLineTrack.cpp  StraightLineTrack.hpp  TestBeamObject.C  TestBeamObject.cpp  TestBeamObject.h  Timepix3Cluster.h  Timepix3Pixel.h  Timepix3Track.h  Timestamp.hpp  Track.cpp  Track.h  Track.hpp  Waveform.hpp  (+2 more)
testing/: CMakeLists.txt  align_dut.conf  align_telescope.conf  analyse_atlaspix.conf  analyse_telescope.conf  download_data.py  run_test.sh  test_align_dut_timepix3tel_dut_atlaspix_ebeam120.conf  test_align_telescope_timepix3tel_dut_atlaspix_ebeam120.conf  test_alignment_telescope_timepix3tel_dut_atlaspix_ebeam120.conf  test_filtering_timepix3tel_ebeam120.conf  test_io_mimosa26tel_desy_5400MeV_plane2.conf  test_io_read_rootobj.conf  test_io_write_json.conf  test_io_write_rootobj.conf  test_mimosa26tel_desy_5400MeV_plane0.conf  test_mimosa26tel_desy_5400MeV_plane1.conf  test_mimosa26tel_desy_5400MeV_plane2.conf  test_mimosa26tel_desy_5400MeV_plane3.conf  test_mimosa26tel_desy_5400MeV_plane4.conf  test_mimosa26tel_desy_5400MeV_plane5.conf  test_read.conf  test_sim_timepix3tel_dut150um_ebeam120_sim.conf  test_timepix3tel_dut150um_ebeam120_sim.conf  test_timepix3tel_ebeam120.conf  test_timepix3tel_ebeam120_gbl.conf  test_timepix3tel_ebeam120_multiplet.conf  test_tracking_timepix3tel_ebeam120.conf  test_tracking_timepix3tel_ebeam120_gbl.conf  test_tracking_timepix3tel_ebeam120_multiplet.conf  test_tracking_timepix3tel_ebeam120_multiplet_gbl.conf  test_write.conf  test_writeJSON.conf
testing/configurations/: align_dut.conf  align_telescope.conf  analyse_telescope.conf
testing/geometries/: geometry_mimosa26_telescope.conf  geometry_timepix3_telescope.conf  geometry_timepix3_telescope_dut.conf  geometry_timepix3_telescope_dut_sim.conf  geometry_timepix3_telescope_final.conf  geometry_timepix3_telescope_initial.conf  geometry_timepix3_telescope_updated.conf  geometry_timepix3_telescope_with_atlaspix_final.conf  geometry_timepix3_telescope_with_atlaspix_initial.conf  mask_MIMOSA26_0.txt  mask_MIMOSA26_2.txt  writing.conf
(+722 files in other folders)
