CORRYVRECKAN_ENABLE_DEFAULT(OFF)

# Define module and return the generated name as ALGORITHM_NAME
CORRYVRECKAN_ALGORITHM(ALGORITHM_NAME)

# Geant4 is required for geometry description and charge deposition.
FIND_PACKAGE(Peary)
IF(NOT PEARY_FOUND)
    MESSAGE(FATAL_ERROR "Could not find peary.")
ENDIF()

# Add source files to library
CORRYVRECKAN_ALGORITHM_SOURCES(${ALGORITHM_NAME}
    Clicpix2EventLoader.cpp
    # ADD SOURCE FILES HERE...
)

MESSAGE(STATUS "${PEARY_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(${ALGORITHM_NAME} SYSTEM PRIVATE ${PEARY_INCLUDE_DIR}/devices/clicpix2 ${PEARY_INCLUDE_DIR}/peary/utils)

# Add Geant4 libraries
TARGET_LINK_LIBRARIES(${ALGORITHM_NAME} ${PEARY_LIBRARY} ${PEARY_CLICPIX2_LIBRARY})

# Provide standard install target
CORRYVRECKAN_ALGORITHM_INSTALL(${ALGORITHM_NAME})
