CORRYVRECKAN_ENABLE_DEFAULT(OFF)

# Define module and return the generated name as ALGORITHM_NAME
CORRYVRECKAN_ALGORITHM(ALGORITHM_NAME)

FIND_PACKAGE(EUDAQ QUIET)
IF(NOT EUDAQ_FOUND)
    MESSAGE(FATAL_ERROR "Could not find EUDAQ 1.7, make sure to set the path to your installation using\n"
    "$ export EUDAQPATH=/your/path/to/EUDAQ")
ENDIF()

INCLUDE_DIRECTORIES(SYSTEM ${EUDAQ_INCLUDE_DIR})

# Add source files to library
CORRYVRECKAN_ALGORITHM_SOURCES(${ALGORITHM_NAME}
    EUDAQEventLoader.cpp
)

# Add EUDAQ libraries
TARGET_LINK_LIBRARIES(${ALGORITHM_NAME} ${EUDAQ_LIBRARY})

# Provide standard install target
CORRYVRECKAN_ALGORITHM_INSTALL(${ALGORITHM_NAME})
