CORRYVRECKAN_ENABLE_DEFAULT(OFF)

# Define module and return the generated name as MODULE_NAME
CORRYVRECKAN_DETECTOR_MODULE(MODULE_NAME)

FIND_PACKAGE(eudaq 2.4 REQUIRED)

INCLUDE_DIRECTORIES(SYSTEM ${EUDAQ_INCLUDE_DIRS})
CORRYVRECKAN_MODULE_SOURCES(${MODULE_NAME} EventLoaderEUDAQ2.cpp)
TARGET_LINK_LIBRARIES(${MODULE_NAME} ${EUDAQ2_LIBRARY} eudaq::core eudaq::modules)

# Provide standard install target
CORRYVRECKAN_MODULE_INSTALL(${MODULE_NAME})
