CORRYVRECKAN_ENABLE_DEFAULT(OFF)

# Define module and return the generated name as MODULE_NAME
CORRYVRECKAN_DETECTOR_MODULE(MODULE_NAME)

FIND_PACKAGE(eudaq 2.5.2 REQUIRED NO_CMAKE_PACKAGE_REGISTRY NO_CMAKE_SYSTEM_PATH)

CORRYVRECKAN_MODULE_SOURCES(${MODULE_NAME} EventLoaderEUDAQ2.cpp)
TARGET_LINK_LIBRARIES(${MODULE_NAME} ${EUDAQ2_LIBRARY} eudaq::core)

# Provide standard install target
CORRYVRECKAN_MODULE_INSTALL(${MODULE_NAME})
